--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
       <div id="first-section" class="  p-0 is-relative ">
         <div class="section is-flex-direction-column ml-2" style="max-width: 500px; padding: 150px 0px;">
 
-          <h2 class="subtitle is-1 "> La Fresque de la <span class="has-text-weight-bold">Biodiversité</span></h2>
-          <h6 class="subtitle is-4 py-4 is-relative" style="z-index: 10;"> Découvrez au travers d'<span
+          <h1 class="subtitle is-1"> La Fresque de la <span class="has-text-weight-bold">Biodiversité</span></h1>
+          <p class="subtitle is-4 py-4 is-relative" style="z-index: 10;"> Découvrez au travers d'<span
               class="has-text-weight-bold">un atelier ludique et collaboratif </span>l'aspect systémique de l'érosion de
             la
-            biodiversité : ce qu’elle est, ce qu’elle permet et ce qui la dégrade.</h6>
+            biodiversité : ce qu’elle est, ce qu’elle permet et ce qui la dégrade.</p>
           <a href="https://www.billetweb.fr/pro/fresquedelabiodiversite"
             class="button is-primary is-medium has-text-weight-bold">Je participe !</a>
 
@@ -96,23 +96,23 @@
           style=" width:100%; left: 0; bottom: 0px; right: 0;"></div>
 
         <div class="container mx-0" style="padding-top: 100px;">
-          <h1 class="title is-2" style="max-width: 500px; margin: auto;">
+          <h2 class="title is-2" style="max-width: 500px; margin: auto;">
 
             Pourquoi la Fresque de la <span class="has-text-weight-bold">Biodiversité</span> ?
-          </h1>
+          </h2>
 
           <div class="separator is-centered has-background-primary mt-5">
           </div>
 
-          <h6 class="subtitle is-6 mt-5 is-relative" style="max-width: 700px;  margin: auto;">• <strong> Pour faire
+          <p class="subtitle is-6 mt-5 is-relative" style="max-width: 700px;  margin: auto;">• <strong> Pour faire
               comprendre
               les enjeux et pressions autour de la biodiversité </strong> se basant sur le rapport de l'IPBES <strong>au
-              travers d'un atelier ludique, collaboratif, visuel et accessible à tous.</strong></h6>
-          <h4 class="subtitle is-4 is-italic mt-6 is-relative has-text-weight-bold"
+              travers d'un atelier ludique, collaboratif, visuel et accessible à tous.</strong></p>
+          <p class="subtitle is-4 is-italic mt-6 is-relative has-text-weight-bold"
             style="max-width: 600px;  margin: auto;">"
             Le taux actuel d'extinction des espèces dans le monde est supérieur à la moyenne des 10 derniers millions
-            d'années, et ce taux s'accélère "</h4>
-          <h6 class="subtitle is-6 is-relative mt-3" style="margin-bottom:100px ;"> IPBES 2019</h6>
+            d'années, et ce taux s'accélère "</p>
+          <div class="subtitle is-6 is-relative mt-3" style="margin-bottom:100px ;"> IPBES 2019</div>
         </div>
       </div>
     </div>
@@ -122,13 +122,13 @@
     <div class="container" style="max-width: 1230px;">
       <div class="columns has-background-beige px-4" style="max-width: 100%;">
         <div class="column is-flex is-5 pl-0">
-          <h1 class="title is-2 has-text-centered-mobile">
+          <h2 class="title is-2 has-text-centered-mobile">
             <span>
               <span class="has-text-weight-bold">Comment se déroule</span> une Fresque de la Biodiversité ?
               <div class="separator has-background-primary mt-5 has-margin-auto-mobile">
               </div>
             </span>
-          </h1>
+          </h2>
         </div>
         <div class="column is-4"></div>
         <div class="column has-text-centered-mobile is-3">
@@ -149,9 +149,9 @@
           <tbody>
             <tr>
               <td class="has-text-weight-bold py-5 pr-2">"Apéro" avec 3 écosystèmes</td>
-              <td class="py-5 pr-2"><span class="has-text-weight-bold">les 39 cartes du jeu</td>
-              <td class="py-5"><span class="has-text-weight-bold">Faire de votre Fresque une oeuvre d'art </td>
-              <td class="py-5"><span class="has-text-weight-bold">Débriefing et pistes d'actions</td>
+              <td class="py-5 pr-2"><span class="has-text-weight-bold">les 39 cartes du jeu</span></td>
+              <td class="py-5"><span class="has-text-weight-bold">Faire de votre Fresque une oeuvre d'art</span></td>
+              <td class="py-5"><span class="has-text-weight-bold">Débriefing et pistes d'actions</span></td>
             </tr>
           </tbody>
           <tfoot>
@@ -284,13 +284,13 @@
       <div class="container" style="max-width: 1230px;">
         <div class="columns pt-6 px-4" style="width: 100%;">
           <div class="column is-3 px-0 has-margin-auto-mobile" style="max-width:300px;">
-            <h1 class="title is-1 has-text-centered-mobile  ">
+            <h2 class="title is-1 has-text-centered-mobile  ">
               <span>
                 <span class="has-text-weight-bold">Comment</span> participer ?
                 <div class="separator has-background-primary mt-2 has-margin-auto-mobile">
                 </div>
               </span>
-            </h1>
+            </h2>
           </div>
 
           <div class="column is-2"></div>
@@ -323,16 +323,16 @@
   </div>
 
   <div class="is-flex is-justify-content-center m-0 pt-6 has-background-clay">
-    <h2 class="is-size-3 has-text-primary">
+    <div class="is-size-3 has-text-primary">
       Ils sont déjà <strong class="has-text-primary">plus de 11 000</strong> à avoir participé !
-    </h2>
+    </div>
   </div>
   <div class="columns is-flex is-justify-content-flex-end m-0 pt-6 has-background-clay is-relative">
     <div class="column is-8 has-background-light-brown is-relative" style="border-radius: 5px;">
       <div class="ml-4 py-5 has-text-light-beige">
-        <h2 class="title is-3 has-text-light-beige has-text-weight-bold">
+        <h3 class="title is-3 has-text-light-beige has-text-weight-bold">
           Les autres manières d’agir
-        </h2>
+        </h3>
         <div class="buttons">
           <a class="button" href="https://www.helloasso.com/associations/fresque-de-la-biodiversite/adhesions/cotisation-association-fresque-de-la-biodiversite" target="_blank">
             🦔 Adhérer à l’association 🦔
@@ -368,8 +368,8 @@
     <div class="container px-4" style="max-width: 1230px;">
       <div class="columns pt-6 " style="padding-bottom: 100px;">
         <div class="column is-6 pl-0">
-          <h1 class="title is-2 has-text-centered-mobile"><span class="has-text-weight-bold"> Les auteurs</span> de
-            l'atelier</h1>
+          <h2 class="title is-2 has-text-centered-mobile"><span class="has-text-weight-bold"> Les auteurs</span> de
+            l'atelier</h2>
           <div class="separator has-background-primary mt-2 has-margin-auto-mobile">
           </div>
           <div
@@ -382,20 +382,20 @@
                 <img width="180px" src="Images/geraldineVuillierLQ.jpg" class="is-relative" style="border-radius: 4px;">
               </figure>
               <span class='is-flex mt-4'>
-                <h1 class="title is-5 has-text-weight-bold py-4">
+                <div class="title is-5 has-text-weight-bold py-4">
                   Géraldine Vuillier
-                </h1>
+                </div>
                 <a href="https://www.linkedin.com/in/geraldine-vuillier/"><img src="Images/pictoBulleLinkedin.svg"
                     class="ml-3 mt-2" style="height: 30.74px; width: 31.47px;"></a>
               </span>
-              <h1 class="subtitle is-6 is-italic figure-quote">
+              <p class="subtitle is-6 is-italic figure-quote">
                 " Le monde ne mourra pas par manque de merveilles, mais uniquement par manque d’émerveillement "
-              </h1>
-              <h1 class="subtitle is-6 has-text-weight-bold has-text-right">
+              </p>
+              <div class="subtitle is-6 has-text-weight-bold has-text-right">
                 Vincent Munier
-              </h1>
+              </div>
 
-              <figure class="image is-relative" style="width: 180px; height: 160px;">
+              <figure class="image is-relative" style="width: 180px; height: 160px; margin-top: 10px;">
                 <div class="rectangle is-absolute" style="top: -10px; left: -10px; border-radius: 5px;">
 
                 </div>
@@ -404,20 +404,20 @@
               </figure>
 
               <span class='is-flex mt-4'>
-                <h1 class="title is-5 has-text-weight-bold py-4">
+                <div class="title is-5 has-text-weight-bold py-4">
                   Charles Sirot
-                </h1>
+                </div>
                 <a href="https://www.linkedin.com/in/charlessirot/"><img src="Images/pictoBulleLinkedin.svg"
                     class="ml-3 mt-2" style="height: 30.74px; width: 31.47px;"></a>
               </span>
 
-              <h1 class="subtitle is-6 is-italic figure-quote">
+              <p class="subtitle is-6 is-italic figure-quote">
                 " Nous n'héritons pas de la terre de nos parents, nous l'empruntons à nos enfants. "
-              </h1>
-              <h1 class="subtitle is-6 has-text-weight-bold is-justify-content-right has-text-right"
+              </p>
+              <div class="subtitle is-6 has-text-weight-bold is-justify-content-right has-text-right"
                 style="padding-bottom: 21px;">
                 Antoine de Saint-Exupéry
-              </h1>
+              </div>
             </div>
 
             <div class="column is-6 has-max-width mx-mobile mt-mobile">
@@ -428,20 +428,20 @@
                 <img width="180px" src="Images/geoffreyVuillierLQ.jpg" class="is-relative" style="border-radius: 4px;">
               </figure>
               <span class='is-flex mt-4'>
-                <h1 class="title is-5 has-text-weight-bold py-4">
+                <div class="title is-5 has-text-weight-bold py-4">
                   Geoffrey Vuillier
-                </h1>
+                </div>
                 <a href="https://www.linkedin.com/in/geoffrey-vuillier/"><img src="Images/pictoBulleLinkedin.svg"
                     class="ml-3 mt-2" style="height: 30.74px; width: 31.47px;"></a>
               </span>
 
-              <h1 class="subtitle is-6 is-italic figure-quote">
+              <p class="subtitle is-6 is-italic figure-quote">
                 "La biodiversité assure la capacité de l’humanité à choisir des trajectoires nouvelles face à un avenir
                 incertain."
-              </h1>
-              <h1 class="subtitle is-6 has-text-weight-bold is-justify-content-right has-text-right">
+              </p>
+              <div class="subtitle is-6 has-text-weight-bold is-justify-content-right has-text-right">
                 IPBES
-              </h1>
+              </div>
 
               <figure class="image is-relative" style="width: 180px; height: 160px; margin-top: 44px;">
                 <div class="rectangle is-absolute" style="top: -10px; left: -10px; border-radius: 5px;">
@@ -450,43 +450,43 @@
                 <img src="Images/logoDeloitte.svg" class="is-relative" style="border-radius: 4px;">
               </figure>
               <span class='is-flex mt-4'>
-                <h1 class="title is-5 has-text-weight-bold py-4">
+                <div class="title is-5 has-text-weight-bold py-4">
                   Deloitte
-                </h1>
+                </div>
                 <a href="https://www2.deloitte.com/fr/fr/services/sustainability.html" target="_blank"><img
                     src="Images/pictoBulleLienExt.svg" class="ml-3 mt-2" style="height: 30.74px; width: 31.47px;"></a>
               </span>
-              <h1 class="subtitle is-6 is-italic figure-quote">
+              <p class="subtitle is-6 is-italic figure-quote">
                 <!-- entrer citation -->
-              </h1>
-              <h1 class="subtitle is-6 has-text-weight-bold has-text-right">
+              </p>
+              <div class="subtitle is-6 has-text-weight-bold has-text-right">
                 <!-- entrer auteur citation -->
-              </h1>
+              </div>
             </div>
           </div>
 
-          <h1 class="title is-2 mt-6 has-margin-auto-mobile" style="max-width: 300px;">
+          <h2 class="title is-2 mt-6 has-margin-auto-mobile" style="max-width: 300px;">
             Avec la
             <span class="has-text-weight-bold">
               coopération
             </span>
             de
-          </h1>
+          </h2>
           <div class="separator has-background-primary mt-2 has-margin-auto-mobile">
           </div>
           <figure class="image is-relative is-flex is-justify-content-center-mobile">
             <img src="Images/logoOFB-LQ.png" class="mt-5">
           </figure>
-          <h4 class="title is-4 has-text-weight-bold has-text-align-center-mobile">
+          <div class="title is-4 has-text-weight-bold has-text-align-center-mobile">
             L'OFB : Office Français de la Biodiversité
-          </h4>
+          </div>
         </div>
 
 
         <div class="column is-5 is-hidden-mobile">
-          <h1 class="title is-2">
+          <h2 class="title is-2">
             <span class="has-text-weight-bold" style="max-width: 250px;">Les étapes</span> du projet
-          </h1>
+          </h2>
           <div class="separator has-background-primary mt-2">
           </div>
           <div class="timeline fresque-timeline mt-6">
@@ -574,10 +574,9 @@
           </div>
 
           <div class="column is-6">
-            <h2 class="title is-2 has-text-weight-bold mb-0">
-              Vous avez déjà participé ?
-            </h2>
             <h2 class="title is-2">
+              <span class="has-text-weight-bold">Vous avez déjà participé ?</span>
+              <br/>
               Vous voulez devenir animateur ?
             </h2>
             <div class="separator has-background-primary mt-2">
@@ -610,7 +609,7 @@
       <div class="columns  pb-6  my-0  has-text-beige" style="padding-top: 100px;">
         <div class="column is-5">
           <img src="Images/logoBlanc.svg">
-          <h1 class="subtitle is-6 has-text-beige pt-4">
+          <p class="subtitle is-6 has-text-beige pt-4">
             Le principe et le contenu de cet atelier sont protégés en Creative Commons BY-NC-ND (Attribution, pas
             d’utilisation commerciale, pas de modification).
             Il est donc possible d’utiliser librement cet outil pour tout évènement gratuit, ouvert au public et durant
@@ -622,19 +621,19 @@
               href="https://www.linkedin.com/in/l%C3%A9opoldine-mennessier-78378998/" target="_blank"
               class="has-hovering has-text-beige is-underlined">Léopoldine Mennessier</a>
             (design).
-          </h1>
+          </p>
         </div>
         <div class="column is-1">
 
         </div>
         <div class="column is-5">
-          <h1 class="title is-5 has-text-weight-bold has-text-beige mb-2">
+          <div class="title is-5 has-text-weight-bold has-text-beige mb-2">
             Ici pas de cookies ni de scroll infini !
-          </h1>
+          </div>
           <div class="separator is-slim has-background-primary">
           </div>
 
-          <h1 class="subtitle is-6 has-text-beige mt-6 ">
+          <p class="subtitle is-6 has-text-beige mt-6 ">
             <span class="has-text-weight-bold has-text-beige">Les ressources sont précieuses, et votre temps
               aussi.</span>
             Cette page pèse <span class="has-text-weight-bold has-text-beige">305 Ko</span> et a demandé <span
@@ -645,7 +644,7 @@
             <br>
             Envie de connaître l’impact environnemental de votre site web ? Allez voir sur <a href="https://ecoindex.fr"
               target="_blank" class="is-underlined has-text-beige has-hovering">ecoindex.fr</a>.
-          </h1>
+          </p>
         </div>
 
       </div>
@@ -656,9 +655,9 @@
         <div class="columns  pt-5 pb-4 ">
           <div class="column is-6 is-flex" style="min-width: 225px; justify-content: space-between;">
             <div>
-              <h1 class="title is-5 has-text-weight-bold">
+              <div class="title is-5 has-text-weight-bold">
                 Retrouvez nous sur :
-              </h1>
+              </div>
             </div>
             <div class="is-flex" style="align-items: center;">
               <a href="https://www.linkedin.com/company/fresquedelabiodiversit%C3%A9/" target="_blank"><img
