Change le lien de contact

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               </a>
             </div>
             <div style="margin: auto;">
-              <a href="mailto:fresquedelabiodiversite@gmail.com" class="navbar-item is-tab">
+              <a href="https://tally.so/r/wzxV7a" target="_blank" rel="noopener noreferrer" class="navbar-item is-tab">
                 Contact
               </a>
             </div>
@@ -564,7 +564,7 @@
             <div class="is-relative" style="z-index: 1;">
               <div class="is-size-3 has-text-weight-bold" style="z-index: 1;"><span class="has-background-dark-beige">Une question ?</span></div>
               <div class="is-size-5 has-text-weight-bold" style="z-index: 1;"><span class="has-background-dark-beige">Une envie ? Une remarque ?</span></div>
-              <a href="mailto:fresquedelabiodiversite@gmail.com" class="button is-primary is-uppercase has-text-weight-bold mt-4" style="z-index: 1;">
+              <a href="https://tally.so/r/wzxV7a" target="_blank" rel="noopener noreferrer" class="button is-primary is-uppercase has-text-weight-bold mt-4" style="z-index: 1;">
                 Contactez nous !
               </a>
             </div>
@@ -580,7 +580,7 @@
       <div class="is-size-3 has-text-weight-bold has-text-centered">Une question ?</div>
       <div class="is-size-5 has-text-weight-bold has-text-centered">Une envie ? Une remarque ?</div>
       <div class="is-flex is-justify-content-center">
-        <a href="mailto:fresquedelabiodiversite@gmail.com" class="button is-primary is-uppercase has-text-weight-bold mt-4" >
+        <a href="https://tally.so/r/wzxV7a" target="_blank" rel="noopener noreferrer" class="button is-primary is-uppercase has-text-weight-bold mt-4" >
           Contactez nous !
         </a>
       </div>
