--- a/index.html
+++ b/index.html
@@ -246,6 +246,11 @@
                 href="https://tally.so/r/wzxV7a" target="_blank"
                 class="is-underlined has-text-classic-dark has-hovering">contacter un des co-auteurs</a> ou un animateur
               professionnel. </p>
+            <p class="is-6 py-1">
+              Pour participer à nos ateliers au Québec (Canada), <a
+                href="https://www.eventbrite.ca/o/fresque-de-la-biodiversite-quebec-56103261883" target="_blank"
+                class="is-underlined has-text-classic-dark has-hovering">cliquez ici</a>.
+            </p>
           </div>
         </div>
         <div class="box p-0">
@@ -493,12 +498,12 @@
             <div>Pour donner votre avis suite à une participation, vous pouvez <a
                 href="https://docs.google.com/forms/d/e/1FAIpQLSeY1xYm9YJdxOwz0kUQn79qSMUWX-rRj2TOrHS31QPhcah1og/viewform"
                 target="_blank" class="is-underlined has-text-weight-bold has-text-classic-dark has-hovering"> remplir
-                ce questionnaire. </a><br><br></div>
+                ce questionnaire</a>.<br><br></div>
             <div class="separator has-background-primary mt-2"></div><br><br>
             <h2 class="title is-2"><span class="has-text-weight-bold">Vous voulez devenir</br>animateur ?</h2>
             <div>Nous vous invitons à <a href="https://tally.so/r/wzxV7a" target="_blank"
                 class="is-underlined has-text-weight-bold has-text-classic-dark has-hovering">remplir le formulaire
-                suivant.</div>
+                suivant</a>.</div>
           </div>
         </div>
       </div>
