feat: add plausible

--- a/en.html
+++ b/en.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="bulma.custom.css">
   <link rel="stylesheet" href="style.css">
   <title>Biodiversity Collage - Workshop to discover the systemic aspect of biodiversity</title>
+  <script defer data-domain="fresquedelabiodiversite.org" src="https://plausible.io/js/script.js"></script>
 </head>
 
 <body>
