--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="style.css">
   <title>La Fresque de la Biodiversité - Atelier pour découvrir l'aspect systémique de l'érosion de la biodiversité
   </title>
+  <script defer data-domain="fresquedelabiodiversite.org" src="https://plausible.io/js/script.js"></script>
 </head>
 
 <body>
