feat: some updates and es.html page

--- a/en.html
+++ b/en.html
@@ -43,13 +43,14 @@
               <a href="#Post-fresque" class="navbar-item is-tab"> Post-workshop </a>
             </div>
             <div style="margin: auto;">
-              <a href="mailto:fresquedelabiodiversite@gmail.com" target="_blank" rel="noopener noreferrer"
+              <a href="mailto:bonjour@fresquedelabiodiversite.org" target="_blank" rel="noopener noreferrer"
                 class="navbar-item is-tab"> Contact us </a>
             </div>
             <div style="margin: auto;">
-              <a href="index.html" class="navbar-item is-tab">
-                <img alt="Voir la page en français" src="Images/flag-fr.png" class=""
-                  style="height: 14px; width: 23px;">&nbsp;FR </a>
+              <a href="index.html" class="navbar-item is-tab"> FR </a>
+            </div>
+            <div style="margin: auto;">
+              <a href="es.html" class="navbar-item is-tab"> ES </a>
             </div>
           </div>
         </div>
@@ -241,7 +242,7 @@
             <p class="is-6 py-1">To find a workshop in English 🇬🇧, search for "Biodiversity Collage".</p>
             <p class="is-6 py-1">If you’re interested in attending as a business representative, numbers are limited to
               one place per session for each organisation. To organise a private session at your organisation, <a
-                href="mailto:fresquedelabiodiversite@gmail.com" target="_blank"
+                href="mailto:bonjour@fresquedelabiodiversite.org" target="_blank"
                 class="is-underlined has-text-classic-dark has-hovering">contact one of the co-authors</a> or a
               professional facilitator. </p>
           </div>
@@ -270,7 +271,7 @@
           <a class="button"
             href="https://www.helloasso.com/associations/fresque-de-la-biodiversite/adhesions/cotisation-association-fresque-de-la-biodiversite/en"
             target="_blank"> 🦔 Join the association 🦔 </a>
-          <a class="button" href="mailto:fresquedelabiodiversite@gmail.com" target="_blank"> 🐌 Organize or lead a
+          <a class="button" href="mailto:bonjour@fresquedelabiodiversite.org" target="_blank"> 🐌 Organize or lead a
             workshop 🐌 </a>
           <a class="button" href="https://www.helloasso.com/associations/fresque-de-la-biodiversite/formulaires/1/en"
             target="_blank"> 🧡 Make a donation 🧡 </a>
@@ -461,7 +462,7 @@
               <div class="is-size-5 has-text-weight-bold" style="z-index: 1;">
                 <span class="has-background-dark-beige">A wish? A comment?</span>
               </div>
-              <a href="mailto:fresquedelabiodiversite@gmail.com" target="_blank" rel="noopener noreferrer"
+              <a href="mailto:bonjour@fresquedelabiodiversite.org" target="_blank" rel="noopener noreferrer"
                 class="button is-primary is-uppercase has-text-weight-bold mt-4" style="z-index: 1;"> CONTACT US! </a>
             </div>
             <div class="is-absolute is-hidden-touch" style="bottom: 20px; right: 20px; z-index: 0">
@@ -475,7 +476,7 @@
       <div class="is-size-3 has-text-weight-bold has-text-centered">A question ?</div>
       <div class="is-size-5 has-text-weight-bold has-text-centered">A wish ? A comment ?</div>
       <div class="is-flex is-justify-content-center">
-        <a href="mailto:fresquedelabiodiversite@gmail.com" target="_blank" rel="noopener noreferrer"
+        <a href="mailto:bonjour@fresquedelabiodiversite.org" target="_blank" rel="noopener noreferrer"
           class="button is-primary is-uppercase has-text-weight-bold mt-4"> CONTACT US! </a>
       </div>
     </div>
